<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="italic"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/user_info"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="italic"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/pass"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="italic"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/pass_info"
        android:textColor="#fff"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="italic"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#000"
        android:textColor="#fff"
        android:text="@string/btn_understood"
        android:textSize="30sp"
        android:textStyle="italic"
        android:id="@+id/btnUnderstood"
        />

</LinearLayout>