<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#39a93b"
    >

    <TextView
        android:layout_width="match_parent"
        android:background="#39a93b"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/User"
        android:textSize="30sp"
        android:textColor="#000"
        android:textStyle="italic"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="15"
        android:maxLines="1"
        android:background="#706969"
        android:textSize="30sp"
        android:inputType="text"
        android:id="@+id/user_field"
        android:textColor="#fff"
        android:layout_marginBottom="15dp"
        android:digits="@string/digits"
        android:gravity="start"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Pass"
        android:textSize="30sp"
        android:textColor="#000"
        android:textStyle="italic"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="15"
        android:maxLines="1"
        android:background="#706969"
        android:textSize="30sp"
        android:digits="@string/digits"
        android:inputType="textPassword"
        android:id="@+id/pass_field"
        android:textColor="#fff"
        android:layout_marginBottom="15dp"
        android:gravity="start"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn"
        android:background="@drawable/main_buttons"
        android:textSize="30sp"
        android:id="@+id/btn_login"
        />

</LinearLayout>