<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000"
    tools:context="com.appschool.bagrutproject.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/intro"
        android:textColor="#fff"
        android:textSize="25sp"
        />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_buttons"
        android:textColor="#000"
        android:text="@string/btn"
        android:textSize="30sp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:id="@+id/btnLog"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_buttons"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/reg"
        android:textSize="30sp"
        android:textStyle="italic"
        android:id="@+id/btnReg"
        />


</LinearLayout>

